chore: arreglado visualizar exámenes profesor

--- a/src/app-proa/profesor/entregas-examen-profesor.html
+++ b/src/app-proa/profesor/entregas-examen-profesor.html
@@ -45,7 +45,9 @@
                 </div>
             </div>
 
-            <a href="#" id="btn-volver" class="volver-enlace">← Volver</a>
+            <a href="examenes-profesor.html" id="btn-volver" class="volver-enlace">← Volver</a>
+
+
 
             <section class="panel-contenido fondoPanel">
             <section class="titulo">
