--- a/src/app-proa/profesor/crear-examen-borrador.html
+++ b/src/app-proa/profesor/crear-examen-borrador.html
@@ -123,7 +123,7 @@
                             </div>
 
                             <div class="respuestas-contenedor">
-                                <span id="recordatorio">NOTA: Recuerda seleccionar la respuesta correcta</span>
+                                <span class="recordatorio">NOTA: Recuerda seleccionar la respuesta correcta</span>
                                 <div class="respuesta-opcion">
                                     <div class="radio-grupo">
                                         <input type="radio" id="pregunta1-a" name="pregunta1" required>
