--- a/src/app-proa/profesor/crear-examen-nuevo.html
+++ b/src/app-proa/profesor/crear-examen-nuevo.html
@@ -166,7 +166,7 @@
             <div class="contenido-popup">
               <p class="parrafo-principal">¿Estás seguro de que quieres publicar el examen?</p>
               <div class="btn-popup">
-                <button class="btn-oscuros-secundario" onclick="btnCancelar()" >Cancelar</button>
+                <button class="btn-oscuros-secundario" onclick="btnCancelar()" type="button" >Cancelar</button>
                 <button type="submit" class="btn-oscuros" onclick="btnAceptar(this)">Aceptar</button>
               </div>
             </div>
