chore: sin éxito a la vista.

--- a/src/app-gti/login.html
+++ b/src/app-gti/login.html
@@ -51,7 +51,7 @@
                 <button type="submit" class="btn">Iniciar sesión</button>
                 <p class="texto-secundario">
                     ¿No tienes una cuenta?
-                    <a href="registro.html" class="enlace-secundario">Regístrate</a>
+                    <a href="registro.php" class="enlace-secundario">Regístrate</a>
                 </p>
             </div>
         </form>
@@ -74,7 +74,7 @@
         <div class="columna-footer">
             <h4>Enlaces rápidos</h4>
             <ul>
-                <li><a class="elementos-footer" href="catalogo.html">Catálogo</a></li>
+                <li><a class="elementos-footer" href="catalogo.php">Catálogo</a></li>
                 <li><a class="elementos-footer" href="preguntasFrecuentes.html">Preguntas Frecuentes</a></li>
                 <li><a class="elementos-footer" href="contacto.html">Contacto</a></li>
             </ul>
