--- a/src/app-gti/preguntasFrecuentes.html
+++ b/src/app-gti/preguntasFrecuentes.html
@@ -109,7 +109,7 @@
         <div class="columna-footer">
             <h4>Enlaces rápidos</h4>
             <ul>
-                <li><a class="elementos-footer" href="catalogo.html">Catálogo</a></li>
+                <li><a class="elementos-footer" href="catalogo.php">Catálogo</a></li>
                 <li><a class="elementos-footer" href="preguntasFrecuentes.html">Preguntas Frecuentes</a></li>
                 <li><a class="elementos-footer" href="contacto.html">Contacto</a></li>
             </ul>
