chore: migrado a php parcialmente. Falta comprobar cositas.

--- a/src/app-proa/index.html
+++ b/src/app-proa/index.html
@@ -36,7 +36,7 @@
             <!-- Botones de entrar y volver a gti -->
             <div class="grupo-botones">
                 <button type="submit" class="btn-oscuros">Entrar a la Demo</button>
-                <button type="button" class="btn-oscuros-secundario" onclick="window.location.href='../index.html'">
+                <button type="button" class="btn-oscuros-secundario" onclick="window.location.href='../index.php'">
                     ← Volver a GTI
                 </button>
             </div>
