chore: rutas correctas para el servidor, se visualiza en Xampp.

--- a/src/app-proa/header-proa.html
+++ b/src/app-proa/header-proa.html
@@ -2,19 +2,19 @@
 <header>
     <div class="header-izquierda">
         <a id="logo-proa-link" href="#">
-            <img src="/src/app-proa/icons/logoBlanco.svg" alt="Logo PROA" class="logo" />
+            <img src="../icons/logoBlanco.svg" alt="Logo PROA" class="logo" />
         </a>
 
     </div>
 
     <div class="header-derecha">
         <button class="boton-notificacion" popovertarget="menu-avisos">
-            <img src="/src/app-proa/icons/avisos.svg" alt="Notificaciones" class="icono-notificacion">
+            <img src="../icons/avisos.svg" alt="Notificaciones" class="icono-notificacion">
         </button>
 
         <button class="usuario-caja" popovertarget="menu-usuario">
             <span id="nombre-usuario-header">Nombre</span>
-            <img src="/src/app-proa/icons/perfil.svg" alt="Icono usuario" class="icono-usuario">
+            <img src="../icons/perfil.svg" alt="Icono usuario" class="icono-usuario">
         </button>
     </div>
 </header>
